increased width and height

--- a/ui.html
+++ b/ui.html
@@ -31,12 +31,14 @@
   <h2>1- Onboarding ⛴</h2>
 
   <input type="checkbox" id="onboarding"><label for="onboarding">I completed the <a
-      href="https://www.figma.com/proto/CqreT4PwxyuDVPMmcJQYx7/Armor-onboarding?page-id=11%3A1&node-id=160%3A36555&viewport=45%2C462%2C0.061435867100954056&scaling=contain">Armor
+      href="https://www.figma.com/proto/CqreT4PwxyuDVPMmcJQYx7/Armor-onboarding?page-id=11%3A1&node-id=160%3A36555&viewport=45%2C462%2C0.061435867100954056&scaling=contain"
+      target="_blank">Armor
       Onboarding</a> steps.</label>
   <br><br>
-  <input type="checkbox" id="fonts"><label for="fonts">I installed <a
-      href="https://fonts.google.com/specimen/Roboto">Roboto</a> and <a
-      href="https://fonts.google.com/specimen/Roboto+Slab">Roboto Slab</a> fonts to the system</label>
+  <input type="checkbox" id="fonts"><label for="fonts">I installed <a href="https://fonts.google.com/specimen/Roboto"
+      target="_blank">Roboto</a> and <a href="https://fonts.google.com/specimen/Roboto+Slab" target="_blank">Roboto
+      Slab</a> fonts to
+    the system</label>
   <br><br>
   <input type="checkbox" id="plugins"><label for="plugins">I installed the plugins</label>
 </body>
