--- a/ui.html
+++ b/ui.html
@@ -19,28 +19,35 @@
       line-height: 27px;
       color: #1C5ECE;
     }
+
+    body {
+      display: flex;
+      padding-top: 90px;
+    }
   </style>
 </head>
 
 <body>
-  <h3>ARMOR DESIGN SYSTEM</h3>
-  <h1>UI Quality Check</h1>
-  <p>Let’s use this list to better adopt Armor components, avoid repetitive work and to achieve a more smooth handover
-    experience for everyone.</p>
+  <div class="main">
+    <h3>ARMOR DESIGN SYSTEM</h3>
+    <h1>UI Quality Check</h1>
+    <p>Let’s use this list to better adopt Armor components, avoid repetitive work and to achieve a more smooth handover
+      experience for everyone.</p>
 
-  <h2>1- Onboarding ⛴</h2>
+    <h2>1- Onboarding ⛴</h2>
 
-  <input type="checkbox" id="onboarding"><label for="onboarding">I completed the <a
-      href="https://www.figma.com/proto/CqreT4PwxyuDVPMmcJQYx7/Armor-onboarding?page-id=11%3A1&node-id=160%3A36555&viewport=45%2C462%2C0.061435867100954056&scaling=contain"
-      target="_blank">Armor
-      Onboarding</a> steps.</label>
-  <br><br>
-  <input type="checkbox" id="fonts"><label for="fonts">I installed <a href="https://fonts.google.com/specimen/Roboto"
-      target="_blank">Roboto</a> and <a href="https://fonts.google.com/specimen/Roboto+Slab" target="_blank">Roboto
-      Slab</a> fonts to
-    the system</label>
-  <br><br>
-  <input type="checkbox" id="plugins"><label for="plugins">I installed the plugins</label>
+    <input type="checkbox" id="onboarding"><label for="onboarding">I completed the <a
+        href="https://www.figma.com/proto/CqreT4PwxyuDVPMmcJQYx7/Armor-onboarding?page-id=11%3A1&node-id=160%3A36555&viewport=45%2C462%2C0.061435867100954056&scaling=contain"
+        target="_blank">Armor
+        Onboarding</a> steps.</label>
+    <br><br>
+    <input type="checkbox" id="fonts"><label for="fonts">I installed <a href="https://fonts.google.com/specimen/Roboto"
+        target="_blank">Roboto</a> and <a href="https://fonts.google.com/specimen/Roboto+Slab" target="_blank">Roboto
+        Slab</a> fonts to
+      the system</label>
+    <br><br>
+    <input type="checkbox" id="plugins"><label for="plugins">I installed the plugins</label>
+  </div>
 </body>
 
 </html>
