--- a/ui.html
+++ b/ui.html
@@ -170,7 +170,7 @@
       <div class="left-header">
         <h3>ARMOR DESIGN SYSTEM</h3>
         <h1>UI Quality Check</h1>
-        <h4>Let’s use this list to better adopt Armor components, avoid repetitive work and to achieve a more smooth
+        <h4>Let's use this list to better adopt Armor components, avoid repetitive work and to achieve a more smooth
           handover
           experience for everyone.</h4>
       </div>
