styled secondary checkboxes

--- a/ui.html
+++ b/ui.html
@@ -73,7 +73,7 @@
       font-weight: 400;
       color: var(--secondary);
       line-height: 24px;
-      margin: 24px 0 24px 44px;
+      margin-bottom: 24px;
     }
 
     .header-box {
@@ -106,6 +106,12 @@
       font-weight: 600;
       line-height: 32px;
       color: var(--accent);
+    }
+
+    .secondary-box {
+      display: flex;
+      flex-direction: column;
+      margin: 24px 0 0 44px;
     }
 
     .link-small {
@@ -215,23 +221,91 @@
     <p class="subtext">Please check the recommended plugins listed below. You may hide or remove this whole section
       after everything is set.</p>
 
-    <p class="secondary-header">Highly Recommended</p>
+    <div class="secondary-box">
+      <p class="secondary-header">Highly Recommended</p>
 
-    <label class="checkbox" style="margin-left: 44px;">
-      <input type="checkbox">
-      <span class="main-label" style="margin-left: 10px;"><a
-          href="https://www.figma.com/community/plugin/852192486284901337/Streamline-Icons%2C-Illustrations-and-Emoji"
-          target="_blank" class="link-big link-small">Streamline
-          Icons</a></span>
-    </label>
+      <label class="checkbox" style="margin-bottom: 24px;">
+        <input type="checkbox">
+        <span class="main-label" style="margin-left: 10px;"><a
+            href="https://www.figma.com/community/plugin/852192486284901337/Streamline-Icons%2C-Illustrations-and-Emoji"
+            target="_blank" class="link-big link-small">Streamline
+            Icons</a></span>
+      </label>
 
-    <label class="checkbox" style="margin-left: 44px;">
-      <input type="checkbox">
-      <span class="main-label" style="margin-left: 10px;"><a
-          href="https://www.figma.com/community/plugin/748533339900865323/Contrast" target="_blank"
-          class="link-big link-small">Contrast</a></span>
-    </label>
+      <label class="checkbox" style="margin-bottom: 32px;">
+        <input type="checkbox">
+        <span class="main-label" style="margin-left: 10px;"><a
+            href="https://www.figma.com/community/plugin/748533339900865323/Contrast" target="_blank"
+            class="link-big link-small">Contrast</a></span>
+      </label>
 
+      <p class="secondary-header">Recommended</p>
+
+      <label class="checkbox" style="margin-bottom: 24px;">
+        <input type="checkbox">
+        <span class="main-label" style="margin-left: 10px;"><a
+            href="https://www.figma.com/community/plugin/731271836271143349/Rename-It" target="_blank"
+            class="link-big link-small">Rename It</a></span>
+      </label>
+
+      <label class="checkbox" style="margin-bottom: 24px;">
+        <input type="checkbox">
+        <span class="main-label" style="margin-left: 10px;"><a
+            href="https://www.figma.com/community/plugin/735072959812183643/Find-and-Replace" target="_blank"
+            class="link-big link-small">Find and Replace</a></span>
+      </label>
+
+      <label class="checkbox" style="margin-bottom: 24px;">
+        <input type="checkbox">
+        <span class="main-label" style="margin-left: 10px;"><a
+            href="https://www.figma.com/community/plugin/731627216655469013/Content-Reel" target="_blank"
+            class="link-big link-small">Content-Reel</a></span>
+      </label>
+
+      <label class="checkbox" style="margin-bottom: 24px;">
+        <input type="checkbox">
+        <span class="main-label" style="margin-left: 10px;"><a
+            href="https://www.figma.com/community/plugin/731260060173130163/Super-Tidy" target="_blank"
+            class="link-big link-small">Super Tidy</a></span>
+      </label>
+
+      <label class="checkbox" style="margin-bottom: 24px;">
+        <input type="checkbox">
+        <span class="main-label" style="margin-left: 10px;"><a
+            href="https://www.figma.com/community/plugin/809860933081065308/LottieFiles" target="_blank"
+            class="link-big link-small">Lottie Files</a></span>
+      </label>
+
+      <label class="checkbox" style="margin-bottom: 24px;">
+        <input type="checkbox">
+        <span class="main-label" style="margin-left: 10px;"><a
+            href="https://www.figma.com/community/plugin/736458162635847353/Mapsicle" target="_blank"
+            class="link-big link-small">Mapsicle/Mapmaker</a></span>
+      </label>
+
+      <label class="checkbox" style="margin-bottom: 24px;">
+        <input type="checkbox">
+        <span class="main-label" style="margin-left: 10px;"><a
+            href="https://www.figma.com/community/plugin/738454987945972471/Unsplash" target="_blank"
+            class="link-big link-small">Unsplash</a></span>
+      </label>
+
+      <label class="checkbox" style="margin-bottom: 24px;">
+        <input type="checkbox">
+        <span class="main-label" style="margin-left: 10px;"><a
+            href="https://www.figma.com/community/plugin/733025261168520714/Figmotion" target="_blank"
+            class="link-big link-small">Figmotion</a></span>
+      </label>
+
+      <label class="checkbox" style="margin-bottom: 24px;">
+        <input type="checkbox">
+        <span class="main-label" style="margin-left: 10px;"><a
+            href="https://www.figma.com/community/plugin/733590967040604714/Brandfetch" target="_blank"
+            class="link-big link-small">Brandfetch</a></span>
+      </label>
+    </div>
+
+    <div class="border"></div>
 
 </body>
 
